Animations and backup image when thumbnail doesnt load

--- a/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
@@ -24,28 +24,28 @@
   <!--Create rows with four columns iterating over the hubitems, showing it's information-->
   <div class="uk-width-3-4 uk-grid-match uk-grid-small" appScrollTracker (scrollingFinished)="getItems()" uk-grid>
     <div class="uk-width-1-4" *ngFor="let hubItem of hubItems">
-      <div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-flex-between">
+      <div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-flex-between" data-aos="fade-up">
         <div class="uk-card-media-top">
           <a target="_blank" [href]="createUrlToPortalItem(hubItem)">
-            <img [src]="createImageUrl(hubItem)" alt="Thumbnail" class="uk-width-1-1">
+            <img [src]="createImageUrl(hubItem)" alt="Thumbnail" class="uk-width-1-1" (error)="onThumbnailImageError($event)">
           </a>
+        </div>
+        <div class="uk-card-badge uk-label no-background">
+          <span class="uk-badge uk-background-primary">{{hubItem.type}}</span>
+          <ng-container *ngIf="layerAlreadyInConfiguration(hubItem); else notInConfig">
+                <span class="uk-badge uk-background-danger"
+                      (click)="removeLayerFromConfiguration(hubItem)">Remove</span>
+          </ng-container>
+          <ng-template #notInConfig>
+            <span class="uk-badge uk-background-success"
+                  (click)="addLayerToConfiguration(hubItem)">Add</span>
+          </ng-template>
         </div>
         <div class="uk-card-header">
           <h3 class="uk-card-title">{{transformTitle(hubItem)}}</h3>
-          <a class="uk-link" target="_blank" [href]="createUrlToPortalItem(hubItem)">Go to portal</a>
         </div>
         <div class="uk-card-body">
-          <div class="uk-card-badge uk-label no-background">
-            <span class="uk-badge uk-background-primary">{{hubItem.type}}</span>
-            <ng-container *ngIf="layerAlreadyInConfiguration(hubItem); else notInConfig">
-                <span class="uk-badge uk-background-danger"
-                      (click)="removeLayerFromConfiguration(hubItem)">Remove</span>
-            </ng-container>
-            <ng-template #notInConfig>
-            <span class="uk-badge uk-background-success"
-                  (click)="addLayerToConfiguration(hubItem)">Add</span>
-            </ng-template>
-          </div>
+            <a class="uk-link" target="_blank" [href]="createUrlToPortalItem(hubItem)">Go to portal</a>
         </div>
       </div>
     </div>
