--- a/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
@@ -153,6 +153,7 @@
         <span *ngSwitchCase="'scene'" uk-icon="icon: world"></span>
         <span *ngSwitchCase="'geoJSON'" uk-icon="icon: code"></span>
         <span *ngSwitchCase="'feature'" uk-icon="icon: location"></span>
+        <span *ngSwitchCase="'map-image'" uk-icon="icon: image"></span>
         <span *ngSwitchDefault uk-icon="icon: question"></span>
       </ng-container>
       <span class="uk-margin-small-left"
