--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -38,3 +38,8 @@ $global-primary-background: #02357c;
 .uk-card-default{
   box-shadow: $global-small-box-shadow;
 }
+
+.uk-tab .uk-active{
+  border-left: 5px solid $global-primary-background;
+  font-weight: bold;
+}
