--- a/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
@@ -1,4 +1,4 @@
-<div id="details-pane" #modal class="uk-modal-full" uk-modal="esc-close:false;bg-close:false;">
+<div #modal class="uk-modal-full" uk-modal>
   <div class="uk-modal-dialog uk-height-1-1" *ngIf="layer">
     <button class="uk-modal-close-full uk-close-large" type="button" uk-close (click)="cancelEdit()"></button>
 
@@ -16,64 +16,86 @@
       <div class="uk-width-2-3">
         <ul id="component-tab-left" class="uk-switcher">
           <li>
-            <form #layerConfig="ngForm" (ngSubmit)="onLayerSave()">
-              <div class="uk-margin">
-                <label class="uk-form-label">Title</label>
-                <div class="uk-form-controls">
-                  <input class="uk-input" type="text" name="title" [(ngModel)]="layer.title" required>
-                </div>
+            <div class="uk-margin">
+              <label class="uk-form-label">Title</label>
+              <div class="uk-form-controls">
+                <input class="uk-input" type="text" name="title" [(ngModel)]="layer.title" required>
               </div>
-              <div class="uk-margin">
-                <label class="uk-form-label" for="url">URL</label>
-                <div class="uk-form-controls">
-                  <input class="uk-input" id="url" name="url" type="text" [(ngModel)]="layer.url" required>
-                </div>
+            </div>
+            <div class="uk-margin">
+              <label class="uk-form-label" for="url">URL</label>
+              <div class="uk-form-controls">
+                <input class="uk-input" id="url" name="url" type="text" [(ngModel)]="layer.url" required>
               </div>
-              <div class="uk-margin">
+            </div>
+            <div class="uk-margin uk-child-width-expand" uk-grid>
+              <div>
                 <label class="uk-form-label" for="minScale">Min Scale</label>
                 <div class="uk-form-controls">
                   <input class="uk-input" id="minScale" name="minScale" type="number" step="100"
                          [(ngModel)]="layer.minScale">
                 </div>
               </div>
-              <div class="uk-margin uk-grid uk-child-width-expand"
-                   *ngIf="layer.elevationInfo;else noElevationInfo">
-                <div>
-                  <label class="uk-form-label" for="elevationMode">Elevation Mode</label>
-                  <div class="uk-form-controls">
-                    <select class="uk-select" id="elevationMode" name="elevationMode"
-                            [(ngModel)]="layer.elevationInfo.mode">
-                      <option value="on-the-ground">On the ground</option>
-                      <option value="relative-to-ground">Relative to ground</option>
-                      <option value="relative-to-scene">Relative to scene</option>
-                      <option value="absolute-height">Absolute height</option>
-                    </select>
-                  </div>
-                </div>
-                <div>
-                  <label class="uk-form-label" for="units">Units</label>
-                  <div class="uk-form-controls">
-                    <select class="uk-select" id="units" name="units"
-                            [(ngModel)]="layer.elevationInfo.unit">
-                      <option value="centimeters">Centimeters</option>
-                      <option value="meters">Meters</option>
-                      <option value="kilometers">Kilometers</option>
-                      <option value="us-feet">US Feet</option>
-                      <option value="feet">Feet</option>
-                      <option value="miles">Miles</option>
-                      <option value="yards">Yards</option>
-                    </select>
-                  </div>
-                </div>
-                <div>
-                  <label class="uk-form-label" for="offset">Offset</label>
-                  <div class="uk-form-controls">
-                    <input class="uk-input" id="offset" name="offset" type="number" step="0.1"
-                           [(ngModel)]="layer.elevationInfo.offset">
-                  </div>
+              <div>
+                <label class="uk-form-label" for="maxScale">Max Scale</label>
+                <div class="uk-form-controls">
+                  <input class="uk-input" id="maxScale" name="maxScale" type="number" step="100"
+                         [(ngModel)]="layer.maxScale">
                 </div>
               </div>
-            </form>
+            </div>
+            <!--           Create a checkbox to show the layer in the legend. -->
+            <div class="uk-margin" uk-grid>
+              <div>
+                <label class="uk-form-label" for="legendEnabled">Show in Legend</label>
+                <div class="uk-form-controls">
+                  <input class="uk-checkbox" id="legendEnabled" name="legendEnabled" type="checkbox"
+                         [(ngModel)]="layer.legendEnabled">
+                </div>
+              </div>
+              <div>
+                <label class="uk-form-label" for="popupEnabled">Popup enabled</label>
+                <div class="uk-form-controls">
+                  <input class="uk-checkbox" id="popupEnabled" name="popupEnabled" type="checkbox" [(ngModel)]="layer.popupEnabled">
+                </div>
+              </div>
+            </div>
+            <div class="uk-margin uk-grid uk-child-width-expand">
+              <div>
+                <label class="uk-form-label" for="elevationMode">Elevation Mode</label>
+                <div class="uk-form-controls">
+                  <select class="uk-select" id="elevationMode" name="elevationMode"
+                          [(ngModel)]="layer.elevationInfo.mode">
+                    <option value="on-the-ground">On the ground</option>
+                    <option value="relative-to-ground">Relative to ground</option>
+                    <option value="relative-to-scene">Relative to scene</option>
+                    <option value="absolute-height">Absolute height</option>
+                  </select>
+                </div>
+              </div>
+              <div>
+                <label class="uk-form-label" for="units">Units</label>
+                <div class="uk-form-controls">
+                  <select class="uk-select" id="units" name="units"
+                          [(ngModel)]="layer.elevationInfo.unit">
+                    <option value="centimeters">Centimeters</option>
+                    <option value="meters">Meters</option>
+                    <option value="kilometers">Kilometers</option>
+                    <option value="us-feet">US Feet</option>
+                    <option value="feet">Feet</option>
+                    <option value="miles">Miles</option>
+                    <option value="yards">Yards</option>
+                  </select>
+                </div>
+              </div>
+              <div>
+                <label class="uk-form-label" for="offset">Offset</label>
+                <div class="uk-form-controls">
+                  <input class="uk-input" id="offset" name="offset" type="number" step="0.1"
+                         [(ngModel)]="layer.elevationInfo.offset">
+                </div>
+              </div>
+            </div>
           </li>
           <li>
             <div class="uk-flex uk-flex-between uk-border-bottom">
@@ -106,20 +128,12 @@
     </div>
 
     <div class="uk-modal-footer uk-text-right">
-      <button class="uk-button uk-button-default uk-modal-close" type="button" (click)="cancelEdit()">Cancel</button>
-      <button class="uk-button uk-button-primary" type="submit">Save</button>
+      <button class="uk-button uk-button-default" type="button" (click)="cancelEdit()">Cancel</button>
+      <button class="uk-button uk-button-primary" type="submit" (click)="onLayerSave()">Save</button>
     </div>
   </div>
 </div>
 
-<ng-template #noElevationInfo>
-  <div>
-    <button class="uk-button uk-button-default" (click)="addElevationInfo()">Add elevation info</button>
-  </div>
-</ng-template>
-<ng-template #noRenderer>
-  <button class="uk-button uk-button-primary" type="button" (click)="createRenderer()">Create Renderer</button>
-</ng-template>
 <ng-template #symboleditor let-symbol="symbol">
   <!--  Create three input boxes next to each other-->
   <div class="uk-grid uk-child-width-expand">
@@ -168,4 +182,8 @@
       </div>
     </div>
   </div>
+</ng-template>
+
+<ng-template #noRenderer>
+  <button class="uk-button uk-button-primary" type="button" (click)="createRenderer()">Create Renderer</button>
 </ng-template>
