--- a/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
@@ -73,7 +73,7 @@
                   </select>
                 </div>
               </div>
-              <div>
+              <div *ngIf="layer.elevationInfo.mode !== 'on-the-ground'">
                 <label class="uk-form-label" for="units">Units</label>
                 <div class="uk-form-controls">
                   <select class="uk-select" id="units" name="units"
@@ -88,7 +88,7 @@
                   </select>
                 </div>
               </div>
-              <div>
+              <div *ngIf="layer.elevationInfo.mode !== 'on-the-ground'">
                 <label class="uk-form-label" for="offset">Offset</label>
                 <div class="uk-form-controls">
                   <input class="uk-input" id="offset" name="offset" type="number" step="0.1"
