Some progress, it compiles but when code is uncommented it doesn't because of types mismatch.
It needs a conditional if a layer is map-image or not, because some properties cannot be configured on those layers

--- a/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
@@ -63,5 +63,5 @@
 </ng-template>
 
 
-<app-layer-editor [layer]="selectedLayer" [configuration]="configuration"
+<app-layer-editor [rootLayerConfig]="selectedLayer" [configuration]="configuration"
                   (save)="onLayerConfigSave($event)"></app-layer-editor>
