--- a/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
@@ -40,7 +40,7 @@
     <div class="uk-width-1-3">
       <ul class="uk-tab-left" uk-tab="connect: #configuration-sections;">
         <li><a href="#">General Settings</a></li>
-<!--        <li><a href="#" *ngIf="!isMapImageLayer">Renderer</a></li>-->
+        <li><a href="#" *ngIf="selectedLayer.type !== 'map-image'">Renderer</a></li>
       </ul>
     </div>
     <div class="uk-width-2-3">
@@ -82,21 +82,21 @@
                 <input class="uk-checkbox" id="legendEnabled" name="legendEnabled" type="checkbox"
                        [(ngModel)]="selectedLayer.legendEnabled">
               </div>
-             <!-- <ng-container *ngIf="!isMapImageLayer">
+              <ng-container *ngIf="selectedLayer.type !== 'map-image'">
                 <label class="uk-form-label" for="popupEnabled">Popup enabled</label>
                 <div class="uk-form-controls">
                   <input class="uk-checkbox" id="popupEnabled" name="popupEnabled" type="checkbox"
                          [(ngModel)]="selectedLayer.popupEnabled">
                 </div>
-              </ng-container>-->
+              </ng-container>
             </div>
             <div class="uk-width-1-2">
-              <!--            <ng-select [(ngModel)]="layerConfig.fields">-->
-              <!--              <ng-option *ngFor="let field of " [value]="field">{{field}}</ng-option>-->
-              <!--            </ng-select>-->
+            <!--  <ng-select [(ngModel)]="layerConfig.fields">
+                <ng-option *ngFor="let field of " [value]="field">{{field}}</ng-option>
+              </ng-select>-->
             </div>
           </div>
-         <!-- <div class="uk-margin uk-grid uk-child-width-expand">
+          <div class="uk-margin uk-grid uk-child-width-expand" *ngIf="selectedLayer.type !== 'map-image'">
             <div>
               <label class="uk-form-label" for="elevationMode">Elevation Mode</label>
               <div class="uk-form-controls">
@@ -131,9 +131,9 @@
                        [(ngModel)]="selectedLayer.elevationInfo.offset">
               </div>
             </div>
-          </div>-->
+          </div>
         </li>
-     <!--   <li *ngIf="!isMapImageLayer">
+        <li *ngIf="selectedLayer.type !== 'map-image'">
           <div class="uk-flex uk-flex-between uk-border-bottom">
             <h3>Renderer</h3>
             <button type="button" class="uk-button uk-button-default uk-button-small" (click)="addUniqueValue()">
@@ -157,7 +157,7 @@
               </li>
             </ul>
           </div>
-        </li>-->
+        </li>
       </ul>
     </div>
   </div>
